--- a/Js/Lab-3/quicksort.html
+++ b/Js/Lab-3/quicksort.html
@@ -1,4 +1,5 @@
- <!-- 6.WAP in JavaScript to check whether the given number is Armstrong or not. (A) -->
+<!-- WAP to read an array form the user and sort them using quick sort. (B) -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script></script>
+    <script>
+     
+    </script>
 </body>
 </html>
